# prometheus-mdns-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker.nix  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: ci.yaml  docker.yaml
nix/: module.nix  overlay.nix  package.nix
src/: main.rs
