[package]
name = "prometheus-mdns-sd-rs"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "mDNS service discovery for prometherus"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/icewind1991/prometheus-mdns-rs"
keywords = ["mdns", "prometheus"]

[dependencies]
mdns = "3"
async-std = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atomicwrites = "0.3"
main_error = "0.1"
futures-util = "0.3"

[profile.release]
lto = true