[package]
name = "prometheus-mdns-sd-rs"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "mDNS service discovery for prometherus"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/icewind1991/prometheus-mdns-rs"
keywords = ["mdns", "prometheus"]
rust-version = "1.63.0"

[dependencies]
mdns = "3.0.0"
async-std = "1.13.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
atomicwrites = "0.4.4"
main_error = "0.1.2"
futures-util = "0.3.31"

[profile.release]
lto = true
